# dotnet_finstack

./: .gitignore  README.md  api_planning.md  applications.md  dotnet_finstack.sln  page_planning.md  readme.md  roadmap.md
FinStack.API/: Program.cs  (+5 more)
FinStack.Engine/: Cargo.toml  rust_project.md
FinStack.Engine/src/: config.rs  enums.rs  lib.rs  traits.rs  utils.rs
FinStack.Engine/src/commands/: create_job_command.rs  import_file_command.rs  mod.rs
FinStack.Engine/src/db/: database.rs  jobs.rs  mod.rs  pool.rs  users.rs
FinStack.Engine/src/db/repository/: jobs_repository.rs  mod.rs  repository.rs  repository_factory.rs  traits.rs
FinStack.Engine/src/db/repository/jobs_repository/: concrete.rs  mock.rs  mod.rs
FinStack.Engine/src/jobs/: import_file.rs  mod.rs
FinStack.Engine/src/models/: dto.rs  enums.rs  job_guid.rs  mod.rs
FinStack.Engine/src/models/entities/: job.rs  mod.rs  user.rs
FinStack.Engine/src/queries/: get_user_by_id.rs  get_users.rs
FinStack.Engine/src/services/: command_builder.rs  command_parser.rs  command_parser.rs.old  command_router.rs  command_router.rs.old  job_parser.rs  job_parser_service.rs  job_runner.rs  job_scheduler.rs  job_service.rs  mod.rs
FinStack.Engine/src/services/command_and_query_service/: dispatcher.rs  mod.rs  traits.rs
FinStack.Engine/src/services/commands_service/: command_parser.rs  command_router.rs  mod.rs  traits.rs  types.rs
FinStack.Engine/src/services/job_service/: errors.rs  helper.rs  job_service.rs  mod.rs  models.rs
FinStack.Engine/src/services/query_service/: mod.rs  query_runner.rs  test.rs
(+215 files in other folders)
