[package]
name = "fin-stack-engine"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4"
simplelog = "0.12"
async-trait = "0.1.88"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.219"
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v4"] }
